overflow issue
fixed overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -864,7 +864,8 @@ hr {
   display: flex;
   justify-content: space-between;
   padding-top: 10px;
-  gap: 30%;
+  gap: 10%;
+  margin-right: 20px;
 }
 
 .sidenav {
