--- a/partials/_base-style.scss
+++ b/partials/_base-style.scss
@@ -1175,7 +1175,8 @@ z-index: 600;
   display: flex;
     justify-content:space-between;
   padding-top:10px;
- gap:30%;
+ gap:10%;
+ margin-right: 20px;
 }
 
 
